# 10Acweek5

ledger/: .env.example  .gitignore  DEMO.md  DESIGN.md  DOMAIN_NOTES.md  README.md  REPORT.md  demo.py  pyproject.toml  schema.sql
ledger/src/: agent_session.py  aggregate.py  event_store.py  loan_application.py  schema.sql
ledger/src/aggregates/: __init__.py  agent_session.py  audit_ledger.py  base.py  compliance_record.py  loan_application.py
ledger/src/commands/: handlers.py
ledger/src/integrity/: __init__.py  audit_chain.py  gas_town.py
ledger/src/mcp/: resources.py  server.py  tools.py
ledger/src/models/: events.py
ledger/src/projections/: agent_performance.py  application_summary.py  base.py  compliance_audit.py  daemon.py
ledger/src/regulatory/: package.py
ledger/src/upcasting/: __init__.py  registry.py  upcasters.py
ledger/src/what_if/: projector.py
ledger/src/whatif/: projector.py
ledger/tests/: conftest.py  test_aggregates.py  test_concurrency.py  test_gas_town.py  test_handlers.py  test_integrity.py  test_mcp_lifecycle.py  test_projections.py  test_regulatory.py  test_store_basics.py  test_upcasting.py  test_whatif.py
